--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,6 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io  # O la URL de tu servidor SonarQube
+          SONAR_PROJECT_KEY: leoncico_ci-test  # La clave de tu proyecto SonarQube
+          SONAR_ORGANIZATION: leoncico  # Solo si usas SonarCloud
