--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run tests with coverage
-        run: pytest --cov=src --cov-report=xml
+        run: pytest --cov=. --cov-report=xml
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
